@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-05-30T16:13:11Z",
   "count" : 2,
-  "count_minmax" : [ 2, 19 ],
-  "count_decinc" : [ -17, +19 ],
+  "count_minmax" : [ 2, 2 ],
+  "count_decinc" : [ -0, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
