@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-28T00:48:34Z",
+  "timestamp" : "2022-05-30T16:13:11Z",
   "count_outdated" : 331,
   "uniques_outdated" : 14,
-  "count" : 391,
-  "uniques" : 20,
+  "count" : 376,
+  "uniques" : 21,
   "views" : [
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 19,
-      "count_minmax": [ 19, 19 ],
+      "count": 2,
+      "count_minmax": [ 2, 19 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -44,6 +44,13 @@
       "timestamp": "2022-05-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-30T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
