@@ -1,10 +1,10 @@
 {
-  "count": 60,
+  "count": 45,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 19,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -30,6 +30,11 @@
     {
       "timestamp": "2022-05-24T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-30T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
