@@ -1,3 +1,10 @@
+2022-05-30T16:13:11Z:
+* notice: last 14d: unq all: 1 45
+* notice: prev accum: outdated-unq outdated-all / unq all: 14 331 / 20 391
+* notice: next accum: outdated-unq outdated-all / unq all: 14 331 / 21 376
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -17 / +1 +2 -0 -0 / 1 2
+* notice: changed dates: [2022-05-16 2022-05-30]
+
 2022-05-28T00:48:34Z:
 * notice: last 14d: unq all: 1 60
 * notice: prev accum: outdated-unq outdated-all / unq all: 13 329 / 20 391
